--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test",
         "ATDD"
     ],
-    "version": "0.9.0",
+    "version": "0.9.1",
     "preferGlobal": false,
     "homepage": "https://github.com/comick/node-robotremoteserver",
     "author": {
@@ -30,13 +30,16 @@
         "url": "https://github.com/comick/node-robotremoteserver/issues"
     },
     "directories": {
-        "lib": "./lib"
+        "lib": "./lib",
+        "example": "./example"
     },
     "main": "./lib/robotremote.js",
     "dependencies": {
         "xmlrpc": ">=1.0.2",
-        "promised-io": ">=0.3.4",
         "is-promise": ">=1.0.0"
+    },
+    "optionalDependencies": {
+        "promised-io": ">=0.3.4"
     },
     "scripts": {
         "test": "pybot test"
