--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ node_js:
   - "0.6"
 install:
   - npm install
-  - node ./test/testlibrary.js
+  - node ./test/testlibrary.js localhost 8765
   - sudo pip install robotframework
