different try travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
+before_script:
+  - sudo pip install robotframework
 language: node_js
 node_js:
   - "0.11"
   - "0.10"
   - "0.8"
   - "0.6"
-install:
-  - npm install
-  - sudo pip install robotframework
