--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "is-promise": ">=1.0.0"
     },
     "devDependencies": {
-        "promise": ">=6.0.1"
+        "promise": ">=6.0.1",
+        "mocha": ">=1.21.5"
     },
     "optionalDependencies": {
         "promised-io": ">=0.3.4"
