more tests, botclient util, client with promises, 0.9.5

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     },
     "directories": {
         "lib": "./lib",
-        "example": "./example"
+        "example": "./example",
+        "bin": "./bin"
     },
     "main": "./lib/robotremote.js",
     "dependencies": {
