--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 env:
+  - ROBOT_VERSION=2.9.2
   - ROBOT_VERSION=2.9.1
   - ROBOT_VERSION=2.9
   - ROBOT_VERSION=2.8.7
@@ -11,6 +12,7 @@ before_script:
   - sudo pip install robotframework==$ROBOT_VERSION
 language: node_js
 node_js:
+  - "5.0"
   - "4.1"
   - "4.0"
   - "0.12"
