Added typings definition file for Typescript users of this library.

--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
             "type": "MIT",
             "url": "https://github.com/comick/node-robotremoteserver/raw/master/LICENSE"
         }
-    ]
+    ],
+    "typings": "lib/robotremote.d.ts"
 }
