--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -17,11 +17,15 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
-
+        robot-version: [2.8.7, 2.9.2, 3.0.4]
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ matrix.node-version }} and 
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm test
+        robot-version: ${{ matrix.robot-version }}
+    - run: |
+        sudo pip install robotframework==${{ matrix.robot-version }}
+        npm install
+        npm test
