--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -16,15 +16,14 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
-        robot-version: [2.8.7, 2.9.2, 3.0.4]
+        node-version: [12.x, 14.x]
+        robot-version: [2.8.7, 2.9.2, 3.0.4, 3.1.2, 3.2.1]
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }} and 
+    - name: Use Node.js ${{ matrix.node-version }} and Robot Framework ${{ matrix.robot-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        robot-version: ${{ matrix.robot-version }}
     - run: |
         sudo pip install robotframework==${{ matrix.robot-version }}
         npm install
