--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -27,4 +27,5 @@ jobs:
     - run: |
         sudo pip install robotframework==${{ matrix.robot-version }}
         npm install
+        npm test
         pybot test
