--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -27,7 +27,7 @@ jobs:
     - run: |
         sudo pip install robotframework==${{ matrix.robot-version }}
         npm install
-        npm test
         pybot test
+    - run: npm test
       env:
         CI: true
