--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -16,10 +16,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
-        robot-version: [2.8.7, 2.9.2, 3.0.4, 3.2.1]
+        node-version: [10.x, 12.x, 14.x, 16.x, 18.x, 19.x]
+        robot-version: [2.9.2, 3.2.2, 4.1.3, 5.0, 6.0.1]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }} and Robot Framework ${{ matrix.robot-version }}
       uses: actions/setup-node@v1
       with:
