--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x, 16.x, 18.x, 19.x]
-        robot-version: [2.9.2, 3.2.2, 4.1.3, 5.0, 6.0.1]
+        robot-version: [3.2.2, 4.1.3, 5.0, 6.0.1]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }} and Robot Framework ${{ matrix.robot-version }}
