--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -16,7 +16,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x, 18.x, 19.x]
+        # Kept current with https://github.com/nodejs/release#release-schedule
+        node-version: [14.x, 16.x, 18.x, 19.x]
         robot-version: [3.2.2, 4.1.3, 5.0, 6.0.1]
     steps:
     - uses: actions/checkout@v3
