--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "test",
         "ATDD"
     ],
-    "version": "1.4.1",
+    "version": "1.5.0",
     "preferGlobal": false,
     "homepage": "https://github.com/comick/node-robotremoteserver",
     "author": {
@@ -33,8 +33,7 @@
     },
     "main": "./lib/robotremote.js",
     "dependencies": {
-        "xmlrpc": ">=1.3.2",
-        "promise": ">=8.1.0"
+        "xmlrpc": ">=1.3.2"
     },
     "devDependencies": {
         "mocha": ">=8.0.1"
@@ -43,7 +42,7 @@
         "test": "mocha && (pybot test || robot test)"
     },
     "engines": {
-        "node": ">=0.10",
+        "node": ">=14.0",
         "npm": ">=1.4.0"
     },
     "licenses": [
