--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     },
     "main": "./lib/robotremote.js",
     "dependencies": {
-        "xmlrpc": ">=1.3.2"
+        "xmlrpc": "^1.3.2"
     },
     "devDependencies": {
-        "mocha": ">=8.0.1"
+        "mocha": "^10.2.0"
     },
     "scripts": {
         "test": "mocha && (pybot test || robot test)"
